--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -827,6 +827,9 @@ aside a:hover {
   align-items: center;
   position: relative;
   margin-bottom: 17px;
+  width: 100%;
+  justify-content: space-between;
+  height: 30px !important;
 }
 
 .block-main .block-head .block-title {
