--- a/src/styles/components/public-style.css
+++ b/src/styles/components/public-style.css
@@ -32,6 +32,13 @@
   color: #4d4d4d;
 }
 
+.public-secondHead {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 16px;
+  color: #4d4d4d;
+}
+
 .public-hoverItem {
   border-radius: 6px;
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
