--- a/src/styles/components/public-style.scss
+++ b/src/styles/components/public-style.scss
@@ -26,10 +26,14 @@
 .public-firstHead {
   font-size: 15px;
   font-weight: 600;
-  // line-height: 31px;
   line-height: 25px;
   color: #4d4d4d;
-  // padding-bottom: 5px;
+}
+.public-secondHead {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 16px;
+  color: #4d4d4d;
 }
 // page every block
 .public-hoverItem {
