日志分析嵌套页面

--- a/src/styles/components/public-style.css
+++ b/src/styles/components/public-style.css
@@ -10,7 +10,7 @@
 .public-table-block {
   box-sizing: border-box;
   margin: 20px 0;
-  padding: 22px;
+  padding: 34px 25px 25px;
   background: #fff;
 }
 
