--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -100,11 +100,13 @@
 
   .hideSidebar {
     .sidebar-container {
-      width: 54px !important;
+      // width: 54px !important;
+      width: 0px !important;
     }
 
     .main-container {
-      margin-left: 54px;
+      // margin-left: 54px;
+      margin-left: 0px;
     }
 
     .submenu-title-noDropdown {
