--- a/src/styles/components/public-style.scss
+++ b/src/styles/components/public-style.scss
@@ -9,7 +9,8 @@
 .public-table-block {
   box-sizing: border-box;
   margin: 20px 0;
-  padding: 22px;
+  // padding: 22px;
+  padding: 34px 25px 25px;
   background: #fff;
 }
 .public-Table-minHeight {
