--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -4,11 +4,8 @@
     min-height: calc(100% - 50px);
     margin-left: $sideBarWidth;
     position: relative;
-    top: 50px;
-    // background: rgba(170, 170, 170, 0.12)!important;
-    // background-color: #edf2f9;
+    // top: 50px;
     background-color: #eaf2fc;
-    // background-color:rgba(237,  242,  249,0.52);
   }
 
 
@@ -19,7 +16,7 @@
     height: 100%;
     position: fixed;
     font-size: 0px;
-    top: 50px;
+    // top: 50px;
     bottom: 0;
     left: 0;
     z-index: 1001;
