--- a/src/styles/components/el-checkbox.scss
+++ b/src/styles/components/el-checkbox.scss
@@ -1,6 +1,5 @@
 .el-checkbox {
-  width: 100px;
-  margin-right: 80px;
+  // margin-right: 80px;
   font-size: 13px;
   font-weight: 400;
   line-height: 25px;
